2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man8/test-m2pa.8.man: boosted default port 10000->18000
	* doc/man/man8/test-m2ua_as.8.man: boosted default port 10000->18000
	* doc/man/man8/test-m3ua_as.8.man: boosted default port 10000->18000
	* doc/man/man8/test-sigtran.8.man: boosted default port 10000->18000

	* src/test/test-m2pa.c: boosted default port 10000->18000
	* src/test/test-m2ua_as.c: boosted default port 10000->18000
	* src/test/test-sigtran.c: boosted default port 10000->18000

	* tests/local.at: corrections for autotest 2.59b+

	* doc/man/man8/test-m2pa.8.man: test updates
	* doc/man/man8/test-m3ua_as.8.man: test updates
	* doc/man/man8/test-sigtran.8.man: test updates
	* src/test/test-m2pa.c: test updates
	* tests/testsuite-m2pa.at: test updates
	* tests/testsuite-m2ua_as.at: test updates

2007-03-11  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man8/test-m2pa.8.man: rework test programs and suites
	* src/test/test-m2pa.c: rework test programs and suites
	* tests/testsuite-m2pa.at: rework test programs and suites
	* tests/testsuite-m2ua_as.at: rework test programs and suites

2007-03-10  Brian Bidulock  <bidulock@openss7.org>

	* src/test/test-m2pa_sl.c: fixed delicate timing on test case 8.14

2007-03-09  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: documented bug fixes
	* src/test/test-m2pa.c: don't display primitives non-verbose
	* tests/Makefile.am: strap out m2ua-as testsuite for release
	* tests/testsuite.at: strap out m2ua-as testsuite for release

	* doc/man/man4/sua-as.4.man: added for release checks
	* doc/man/man4/tua-as.4.man: added for release checks

	* src/util/init/sigtran: update module list
	* src/util/init/sigtran.sh: update module list
	* src/util/sysconfig/sigtran.in: update module list

	* doc/manual/bugs.texi: documented initial timeout bug
	* src/modules/m2pa_sl.c: fixed initial timeout bug

2007-03-08  Brian Bidulock  <bidulock@openss7.org>
