@@ -1,7 +1,7 @@
 ## vim: ft=config comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-# @(#) $RCSfile: Config.in,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/02/14 14:08:46 $
+# @(#) $RCSfile: Config.in,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/12 11:15:34 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -46,11 +46,14 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2007/02/14 14:08:46 $ by $Author: brian $
+## Last Modified $Date: 2007/03/12 11:15:34 $ by $Author: brian $
 ##
 ## -----------------------------------------------------------------------------
 ##
 ## $Log: Config.in,v $
+## Revision 0.9.2.5  2007/03/12 11:15:34  brian
+## - correct last configruation files for dashes
+##
 ## Revision 0.9.2.4  2007/02/14 14:08:46  brian
 ## - broad changes updating support for SS7 MTP and M3UA
 ##
@@ -100,12 +103,12 @@ objname	driver	isua-as	    isua_as
 ##		name
 #loadable	mg
 #loadable	mx
-loadable	ua-as
-loadable	m2ua-as
-loadable	m3ua-as
-loadable	sua-as
-loadable	tua-as
-loadable	isua-as
+loadable	ua_as
+loadable	m2ua_as
+loadable	m3ua_as
+loadable	sua_as
+loadable	tua_as
+loadable	isua_as
 
 ##   Node specifications
 ## -----------------------------------------------------------
