@@ -1,6 +1,6 @@
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/03/07 23:51:13 $
+# @(#) $RCSfile: lis.conf,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/12 11:15:28 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -45,7 +45,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2007/03/07 23:51:13 $ by $Author: brian $
+## Last Modified $Date: 2007/03/12 11:15:28 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -78,8 +78,8 @@ driver	x25-plp		plp	*
 ##	type	name		object name
 objname	driver	clns		clns
 objname	driver	tp		tp
-objname	driver	x25-lapb	x25-lapb
-objname	driver	x25-plp		x25-plp
+objname	driver	x25-lapb	x25_lapb
+objname	driver	x25-plp		x25_plp
 
 ##
 ## Autopush specifications
@@ -102,8 +102,8 @@ objname	driver	x25-plp		x25-plp
 ##
 loadable    clns
 loadable    tp
-loadable    x25-lapb
-loadable    x25-plp
+loadable    x25_lapb
+loadable    x25_plp
 
 ##
 ## Initialization specifications
