@@ -1,5 +1,7 @@
 2007-03-12  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/drivers/lis.conf: correct for dashes
+
 	* tests/local.at: corrections for autotest 2.59b+
 
 2007-03-08  Brian Bidulock  <bidulock@openss7.org>
